--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "jssha": "^2.3.1",
+    "kanboard": "0.0.3",
     "matrix-js-sdk": "^0.7.13",
     "node-localstorage": "^1.3.0",
     "ntwitter": "^0.5.0",
@@ -29,5 +30,8 @@
     "xml2js": "^0.4.17",
     "xmlrpc": "^1.3.2"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "reload": "^2.2.2"
+  }
 }
